fixing nav header on mobile

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -72,7 +72,7 @@
     .nav-small .nav-links {
         display: block;
         margin-left: -12px;
-        margin-top: -3px;
+        margin-top: 35px;
         text-align: center;
         background-color: #e3e3e3;
     }
